tdf#85482 FILEOPEN: very slow loading of .ODS

On my machine, this takes the loading from 21s to 8s.

We can delay doing line height calculation till after load, since we run
the calculation over all rows after load

Change-Id: I5c0d02297fb10bada28105a82da10c498ce8f6cf